<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="details_about_me">A propos de moi</string>
    <string name="add_favorite">Ajout aux favories</string>
    <string name="remove_favorite">Retrait des favories</string>
</resources>
